# selfcar-path-planning

global_path/: CMakeLists.txt  CMakeLists.txt.user.45337cf  package.xml
global_path/include/: dijkstra.h
global_path/launch/: path.launch
global_path/maps/: global_map.yaml
global_path/path_data/: .~lock.22.06.28.edge_kcity.csv#  .~lock.22.5.13_node.csv#  .~lock.edge_manypoints.csv#  22.05.29.edge_ochang.csv  22.05.29.node_ochang.csv  22.06.28.edge_kcity.csv  22.07.08.node_kcity.csv  22.5.13.edge.csv  22.5.13_node.csv  beginner.txt  edge_edit_22_04_19.csv  edge_manypoints.csv  node_edit_22_04_19.csv  node_manypoints.csv
global_path/path_data/kcity/: .~lock.22.08.03_kcity_test_edge.csv#  .~lock.final_edge.csv#  22.08.03_kcity_test_edge.csv  22.08.03_kcity_test_node.csv  final_node.csv
global_path/path_data/ochang/: 22.07.16.node(O).csv  22.07.27.edge.csv  22.07.27.node.csv
global_path/scripts/: globa_path_publisher.py
global_path/src/: dijkstra.cpp  dijkstra_node.cpp
global_path_tryout/: CMakeLists.txt  package.xml
global_path_tryout/include/: csv.h  dijkstra.h
global_path_tryout/path_data/kcity/: .~lock.semi_final_edge.csv#  final_edge.csv  semi_final_edge.csv  semi_final_node.csv
global_path_tryout/path_data/ochang/: .~lock.22.07.27.edge.csv#  .~lock.ctrack_urban_edge_revise.csv#  22.07.16.edge(O).csv  ctrack_urban_edge_revise.csv  ctrack_urban_node_revise.csv
global_path_tryout/src/: dijkstra.cpp
lidar_point_tracking/: CMakeLists.txt  package.xml
lidar_point_tracking/include/: point_tracking.h
lidar_point_tracking/launch/: point_tracking.launch
lidar_point_tracking/src/: point_tracking.cpp  point_tracking_node.cpp
local_path/: CMakeLists.txt  CMakeLists.txt.user.26f3809.22  CMakeLists.txt.user.346a5ae.4.8-pre1  CMakeLists.txt.user.45337cf.4.8-pre1  CMakeLists.txt.user.d8137a8.22  package.xml
local_path/include/: local_path.h  pid.h  pure_pursuit.h  ros_data.h
local_path/launch/: control.launch
local_path/src/: local_path.cpp  pid.cpp  pure_pursuit.cpp  ros_data.cpp
local_path_tryout/: CMakeLists.txt  package.xml
local_path_tryout/include/: local_path.h  ros_data.h
local_path_tryout/launch/: control.launch
local_path_tryout/src/: local_path.cpp  pure_pursuit.cpp  ros_data.cpp
parking_path/: CMakeLists.txt  package.xml
parking_path/include/: parking_path.h
parking_path/path_data/: diagonal_path1.txt  diagonal_path2.txt  diagonal_path3.txt  diagonal_path4.txt  diagonal_path5.txt  diagonal_path6.txt  parallel_path1.txt  parallel_path2.txt  stop_node.txt
parking_path/src/: parking_path.cpp  parking_path_node.cpp
parking_path/temp_path_data/: diagonal_path1.txt  diagonal_path2.txt  diagonal_path3.txt  parallel_path2.txt
school_path/: CMakeLists.txt  CMakeLists.txt.user.45337cf  package.xml
school_path/include/: school_path.h
school_path/path_data/: utm_x.txt  utm_y.txt
school_path/src/: school_path.cpp  school_path_node.cpp
tf_launch/: CMakeLists.txt  CMakeLists.txt.user.45337cf  package.xml
tf_launch/launch/: control_debug.launch  path_debug.launch  school_launch.launch  selfcar_launch.launch
tf_launch/rviz/: setting.rviz
tf_launch/src/: tf.cpp
